# mlops

./: .gitignore  cloudbuild.yaml  load_from_env.py  main.py  requirements.txt
lightning_logs/version_0/: events.out.tfevents.1736805517.Ramis-MacBook-Pro.local.96421.0
lightning_logs/version_1/: events.out.tfevents.1736805595.Ramis-MacBook-Pro.local.96444.0
s1/: data.py  main.py  model.pth
s1_development_environment/: data.py  main.py  model.py
s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb  checkpoint.pth
s2_organisation_and_version_control/: greetings.py
s2_organisation_and_version_control/cookiecuttertesting/: README.md  index.html  pyproject.toml  tasks.py
s2_organisation_and_version_control/cookiecuttertesting/dockerfiles/: api.dockerfile  train.dockerfile
s2_organisation_and_version_control/cookiecuttertesting/docs/: index.html  mkdocs.yaml
s2_organisation_and_version_control/cookiecuttertesting/docs/source/: index.html  index.md
s2_organisation_and_version_control/cookiecuttertesting/src/mlops_cookie/: data.py  evaluate.py  model.py  train.py
s2_organisation_and_version_control/cookiecuttertesting/tests/: test_data.py
s2_organisation_and_version_control/exercise_files/: typing_exercise.py
s4_debugging_and_logging/: my_logger.py
s4_debugging_and_logging/exercise_files/: data.py  main.py  (+5 more)
s6_cloud/: cloudbuild.yaml  main.py
search/: search_index.json
(+36 files in other folders)
