[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "mlops-cookie"
version = "0.0.1"
description = "testing cookiecutter"
readme = "README.md"
keywords = [
  "machine learning",
  "MLOps",
]
authors = [
  { name = "rami", email = "your@email.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]
